# SecureContainer

./: Cargo.toml  LICENSE  README.md  build.rs  covarage.sh
coverage/: build.rs.html  index.html
coverage/libuta-rs/: build.rs.html  index.html
coverage/libuta-rs/src/: index.html  lib.rs.html
coverage/src/: args.rs.html  cli.rs.html  cryptsetup_wrapper.rs.html  daemon.rs.html  error_handling.rs.html  file_io_operations.rs.html  file_system_operations.rs.html  index.html  lib.rs.html  utilities.rs.html
libuta-rs/: Cargo.toml  build.rs  wrapper_header_file.h
libuta-rs/src/: bindings.rs  lib.rs
proto/: SecureContainer.proto
src/: args.rs  cli.rs  cryptsetup_wrapper.rs  daemon.rs  error_handling.rs  file_io_operations.rs  file_system_operations.rs  lib.rs  utilities.rs
tests/: negative_testing.sh  positive_testing.sh
